fix: user_actions_buttons_container z-index

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -574,7 +574,7 @@ audio {
     position: fixed;
     left: 10px;
     bottom: 10px;
-    z-index: 1;
+    z-index: 12;
     display: flex;
     flex-direction: column;
     gap: 10px;
